2010-08-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/utils.c, src/utils.h:
   Add utils_get_eol_char().
 * plugins/geanyfunctions.h, src/document.c, src/editor.c, src/editor.h,
   src/plugindata.h, src/plugins.c, src/templates.c, src/utils.c,
   src/utils.h:
   Ensure inserted templates always have proper line ending characters
   according to the current document's preference.
   This is also fixes problems with templates on Windows which had
   always Unix line ending characters but now since they are read
   from files, these have Windows line ending characters and had been
   converted twice.


2010-07-31  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/vte.c:
   Fix build with GTK 2.8, use the stock icon name directly instead
   of the macro. Though, the icon is still missing for GTK 2.8.
 * src/templates.c:
   Make make_comment_block() work with a GString. This is not yet
   perfect but a bit better than before.


2010-07-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/keybindings.c, src/vte.c, src/vte.h:
   Implement 'Select All' for the VTE widget.


2010-07-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.nsi:
   Fix missing template files in the Windows installer.


2010-07-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.python:
   Update list of Python builtins, based on Python 2.6.


2010-07-13  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/filetypes.c:
   On Windows, convert filetype extensions read from config files
   to lower case (closes #3028856).


2010-07-12  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Focus toolbar item when pressing Go to Line keybinding only when
   it's not in the toolbar's drop down overflow menu (fixes #3027454).


2010-07-11  Lex Trotman  <elextr(at)gmail(dot)com>

 * src/build.c:
   Fix build menu translation problems.

